qt/gen_qshortcut.nim

import Qt5Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Widgets")
{.compile("gen_qshortcut.cpp", cflags).}


import gen_qshortcut_types
export gen_qshortcut_types

import
  gen_qcoreevent,
  gen_qkeysequence,
  gen_qmetaobject,
  gen_qnamespace,
  gen_qobject,
  gen_qobjectdefs,
  gen_qwidget
export
  gen_qcoreevent,
  gen_qkeysequence,
  gen_qmetaobject,
  gen_qnamespace,
  gen_qobject,
  gen_qobjectdefs,
  gen_qwidget

type cQShortcut*{.exportc: "QShortcut", incompleteStruct.} = object

proc fcQShortcut_new(parent: pointer): ptr cQShortcut {.importc: "QShortcut_new".}
proc fcQShortcut_new2(key: pointer, parent: pointer): ptr cQShortcut {.importc: "QShortcut_new2".}
proc fcQShortcut_new3(key: pointer, parent: pointer, member: cstring): ptr cQShortcut {.importc: "QShortcut_new3".}
proc fcQShortcut_new4(key: pointer, parent: pointer, member: cstring, ambiguousMember: cstring): ptr cQShortcut {.importc: "QShortcut_new4".}
proc fcQShortcut_new5(key: pointer, parent: pointer, member: cstring, ambiguousMember: cstring, shortcutContext: cint): ptr cQShortcut {.importc: "QShortcut_new5".}
proc fcQShortcut_metaObject(self: pointer, ): pointer {.importc: "QShortcut_metaObject".}
proc fcQShortcut_metacast(self: pointer, param1: cstring): pointer {.importc: "QShortcut_metacast".}
proc fcQShortcut_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QShortcut_metacall".}
proc fcQShortcut_tr(s: cstring): struct_miqt_string {.importc: "QShortcut_tr".}
proc fcQShortcut_trUtf8(s: cstring): struct_miqt_string {.importc: "QShortcut_trUtf8".}
proc fcQShortcut_setKey(self: pointer, key: pointer): void {.importc: "QShortcut_setKey".}
proc fcQShortcut_key(self: pointer, ): pointer {.importc: "QShortcut_key".}
proc fcQShortcut_setEnabled(self: pointer, enable: bool): void {.importc: "QShortcut_setEnabled".}
proc fcQShortcut_isEnabled(self: pointer, ): bool {.importc: "QShortcut_isEnabled".}
proc fcQShortcut_setContext(self: pointer, context: cint): void {.importc: "QShortcut_setContext".}
proc fcQShortcut_context(self: pointer, ): cint {.importc: "QShortcut_context".}
proc fcQShortcut_setWhatsThis(self: pointer, text: struct_miqt_string): void {.importc: "QShortcut_setWhatsThis".}
proc fcQShortcut_whatsThis(self: pointer, ): struct_miqt_string {.importc: "QShortcut_whatsThis".}
proc fcQShortcut_setAutoRepeat(self: pointer, on: bool): void {.importc: "QShortcut_setAutoRepeat".}
proc fcQShortcut_autoRepeat(self: pointer, ): bool {.importc: "QShortcut_autoRepeat".}
proc fcQShortcut_id(self: pointer, ): cint {.importc: "QShortcut_id".}
proc fcQShortcut_parentWidget(self: pointer, ): pointer {.importc: "QShortcut_parentWidget".}
proc fcQShortcut_activated(self: pointer, ): void {.importc: "QShortcut_activated".}
proc fQShortcut_connect_activated(self: pointer, slot: int) {.importc: "QShortcut_connect_activated".}
proc fcQShortcut_activatedAmbiguously(self: pointer, ): void {.importc: "QShortcut_activatedAmbiguously".}
proc fQShortcut_connect_activatedAmbiguously(self: pointer, slot: int) {.importc: "QShortcut_connect_activatedAmbiguously".}
proc fcQShortcut_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QShortcut_tr2".}
proc fcQShortcut_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QShortcut_tr3".}
proc fcQShortcut_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QShortcut_trUtf82".}
proc fcQShortcut_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QShortcut_trUtf83".}
proc fQShortcut_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QShortcut_virtualbase_metaObject".}
proc fcQShortcut_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QShortcut_override_virtual_metaObject".}
proc fQShortcut_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QShortcut_virtualbase_metacast".}
proc fcQShortcut_override_virtual_metacast(self: pointer, slot: int) {.importc: "QShortcut_override_virtual_metacast".}
proc fQShortcut_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QShortcut_virtualbase_metacall".}
proc fcQShortcut_override_virtual_metacall(self: pointer, slot: int) {.importc: "QShortcut_override_virtual_metacall".}
proc fQShortcut_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QShortcut_virtualbase_event".}
proc fcQShortcut_override_virtual_event(self: pointer, slot: int) {.importc: "QShortcut_override_virtual_event".}
proc fQShortcut_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QShortcut_virtualbase_eventFilter".}
proc fcQShortcut_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QShortcut_override_virtual_eventFilter".}
proc fQShortcut_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QShortcut_virtualbase_timerEvent".}
proc fcQShortcut_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QShortcut_override_virtual_timerEvent".}
proc fQShortcut_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QShortcut_virtualbase_childEvent".}
proc fcQShortcut_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QShortcut_override_virtual_childEvent".}
proc fQShortcut_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QShortcut_virtualbase_customEvent".}
proc fcQShortcut_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QShortcut_override_virtual_customEvent".}
proc fQShortcut_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QShortcut_virtualbase_connectNotify".}
proc fcQShortcut_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QShortcut_override_virtual_connectNotify".}
proc fQShortcut_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QShortcut_virtualbase_disconnectNotify".}
proc fcQShortcut_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QShortcut_override_virtual_disconnectNotify".}
proc fcQShortcut_staticMetaObject(): pointer {.importc: "QShortcut_staticMetaObject".}
proc fcQShortcut_delete(self: pointer) {.importc: "QShortcut_delete".}


func init*(T: type QShortcut, h: ptr cQShortcut): QShortcut =
  T(h: h)
proc create*(T: type QShortcut, parent: gen_qwidget.QWidget): QShortcut =

  QShortcut.init(fcQShortcut_new(parent.h))
proc create*(T: type QShortcut, key: gen_qkeysequence.QKeySequence, parent: gen_qwidget.QWidget): QShortcut =

  QShortcut.init(fcQShortcut_new2(key.h, parent.h))
proc create*(T: type QShortcut, key: gen_qkeysequence.QKeySequence, parent: gen_qwidget.QWidget, member: cstring): QShortcut =

  QShortcut.init(fcQShortcut_new3(key.h, parent.h, member))
proc create*(T: type QShortcut, key: gen_qkeysequence.QKeySequence, parent: gen_qwidget.QWidget, member: cstring, ambiguousMember: cstring): QShortcut =

  QShortcut.init(fcQShortcut_new4(key.h, parent.h, member, ambiguousMember))
proc create*(T: type QShortcut, key: gen_qkeysequence.QKeySequence, parent: gen_qwidget.QWidget, member: cstring, ambiguousMember: cstring, shortcutContext: gen_qnamespace.ShortcutContext): QShortcut =

  QShortcut.init(fcQShortcut_new5(key.h, parent.h, member, ambiguousMember, cint(shortcutContext)))
proc metaObject*(self: QShortcut, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQShortcut_metaObject(self.h))

proc metacast*(self: QShortcut, param1: cstring): pointer =

  fcQShortcut_metacast(self.h, param1)

proc metacall*(self: QShortcut, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQShortcut_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QShortcut, s: cstring): string =

  let v_ms = fcQShortcut_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QShortcut, s: cstring): string =

  let v_ms = fcQShortcut_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setKey*(self: QShortcut, key: gen_qkeysequence.QKeySequence): void =

  fcQShortcut_setKey(self.h, key.h)

proc key*(self: QShortcut, ): gen_qkeysequence.QKeySequence =

  gen_qkeysequence.QKeySequence(h: fcQShortcut_key(self.h))

proc setEnabled*(self: QShortcut, enable: bool): void =

  fcQShortcut_setEnabled(self.h, enable)

proc isEnabled*(self: QShortcut, ): bool =

  fcQShortcut_isEnabled(self.h)

proc setContext*(self: QShortcut, context: gen_qnamespace.ShortcutContext): void =

  fcQShortcut_setContext(self.h, cint(context))

proc context*(self: QShortcut, ): gen_qnamespace.ShortcutContext =

  gen_qnamespace.ShortcutContext(fcQShortcut_context(self.h))

proc setWhatsThis*(self: QShortcut, text: string): void =

  fcQShortcut_setWhatsThis(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc whatsThis*(self: QShortcut, ): string =

  let v_ms = fcQShortcut_whatsThis(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setAutoRepeat*(self: QShortcut, on: bool): void =

  fcQShortcut_setAutoRepeat(self.h, on)

proc autoRepeat*(self: QShortcut, ): bool =

  fcQShortcut_autoRepeat(self.h)

proc id*(self: QShortcut, ): cint =

  fcQShortcut_id(self.h)

proc parentWidget*(self: QShortcut, ): gen_qwidget.QWidget =

  gen_qwidget.QWidget(h: fcQShortcut_parentWidget(self.h))

proc activated*(self: QShortcut, ): void =

  fcQShortcut_activated(self.h)

proc miqt_exec_callback_QShortcut_activated(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onactivated*(self: QShortcut, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQShortcut_connect_activated(self.h, cast[int](addr tmp[]))
proc activatedAmbiguously*(self: QShortcut, ): void =

  fcQShortcut_activatedAmbiguously(self.h)

proc miqt_exec_callback_QShortcut_activatedAmbiguously(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onactivatedAmbiguously*(self: QShortcut, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQShortcut_connect_activatedAmbiguously(self.h, cast[int](addr tmp[]))
proc tr2*(_: type QShortcut, s: cstring, c: cstring): string =

  let v_ms = fcQShortcut_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QShortcut, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQShortcut_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QShortcut, s: cstring, c: cstring): string =

  let v_ms = fcQShortcut_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QShortcut, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQShortcut_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret
